--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -12,6 +12,7 @@
 <body>
     <section>
         <article>
+            <h1>Anton hello</h1>
             <h3>Lyuba shuba!!! hahaha!! <span>it works</span></h3>
             <img src="../../resources/images/designation-of-origin-header.jpg">
             <ul>
@@ -42,6 +43,7 @@
                     </ul>
                 </li>
             </ul>
+            <p>gogogo</p>
         </article>
     </section>
 
