--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
 @import "blocks/mixins";
-
+@import "blocks/normalize";
 @import "blocks/devices";
 @import "blocks/colours";
+@import "blocks/page";
