--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -1,9 +1,75 @@
+* {
+  @include box-sizing(border-box);
+}
+
+input {
+  outline: none;
+}
+
 .wrapper {
   background-color: $background;
   padding: 15px;
 
+  .filter-wrap {
+    position: relative;
+    margin-bottom: 20px;
+
+    &:before {
+      @include transform(translateY(-50%));
+      position: absolute;
+      content: "\f002";
+      left: 10px;
+      top: 50%;
+      z-index: 2;
+      font-family: FontAwesome;
+    }
+  }
+
   .name-filter {
     @include border-radius(20px);
     width: 100%;
+    border: solid 1px $dark-gray;
+    font-size: 12px;
+    padding: 5px 10px 5px 35px;
+    position: relative;
+  }
+
+  .contacts-list {
+    margin: 20px 0 30px;
+     &--item {
+       padding: 10px;
+       background-color: $light-purple;
+
+       &:after {
+         @include after;
+       }
+
+       > div {
+         display: inline-block;
+         text-align: center;
+         vertical-align: middle;
+
+         &.icon {
+           width: 15%;
+         }
+
+         &.contact {
+           width: 55%;
+
+           p {
+             line-height: 1.2;
+             margin: 0;
+           }
+         }
+
+         &.edit {
+           width: 10%;
+         }
+
+         &.close {
+           width: 10%;
+         }
+       }
+     }
   }
 }
