--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -11,24 +11,29 @@
     <!--<link rel="stylesheet" href="../../../font-awesome/css/font-awesome.min.css">-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!--<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet">
 
 </head>
 <body>
     <div class="wrapper">
         <div class="filter-wrap">
-            <input type="text" class="name-filter" placeholder="Filter by name" name="filter">
+            <input type="text" placeholder="Filter by name" name="filter" class="name-filter" >
         </div>
 
         <div class="contacts-list">
-            <div class="contacts-list--item">
+            <div class="contacts-list_item">
                 <div class="icon"><i class="fa fa-address-book-o" aria-hidden="true"></i></div>
                 <div class="contact">
                     <p class="name">Adrian Alder</p>
                     <span class="mail">mail@gmail.com</span>
                 </div>
                 <div class="edit"><i class="fa fa-pencil" aria-hidden="true"></i></div>
-                <div class="close"><i class="fa fa-times" aria-hidden="true"></i></div>
+                <div class="close"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
             </div>
+        </div>
+        <div class="buttons">
+            <button>Countries</button>
+            <button>Add New</button>
         </div>
     </div>
 </body>
