--- a/app/styles/blocks/_colours.scss
+++ b/app/styles/blocks/_colours.scss
@@ -1,4 +1,7 @@
 $background: #d6d6d6;
-$dark-gray: #7a7a7a;
+$gray: #7a7a7a;
+$dark-gray: #616161;
+$light-gray: #d6d6d6;
+$purple: #9d7fa6;
 $light-purple: #e8eaf6;
 $blue: #90caf9;
