--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -1,14 +1,18 @@
 * {
   @include box-sizing(border-box);
+  font-family: 'Ubuntu', sans-serif;
 }
 
-input {
+input,
+button {
   outline: none;
+  border:none;
 }
 
 .wrapper {
   background-color: $background;
   padding: 15px;
+  min-height: 100vh;
 
   .filter-wrap {
     position: relative;
@@ -28,7 +32,7 @@ input {
   .name-filter {
     @include border-radius(20px);
     width: 100%;
-    border: solid 1px $dark-gray;
+    border: solid 1px $gray;
     font-size: 12px;
     padding: 5px 10px 5px 35px;
     position: relative;
@@ -36,9 +40,10 @@ input {
 
   .contacts-list {
     margin: 20px 0 30px;
-     &--item {
+     &_item {
        padding: 10px;
        background-color: $light-purple;
+       border-bottom: solid 1px $light-gray;
 
        &:after {
          @include after;
@@ -46,30 +51,67 @@ input {
 
        > div {
          display: inline-block;
-         text-align: center;
          vertical-align: middle;
 
          &.icon {
-           width: 15%;
+           width: 20%;
+           font-size: 22px;
+           color: $dark-gray;
+           text-align: center;
          }
 
          &.contact {
            width: 55%;
+           text-align: left;
+           line-height: 1;
 
            p {
-             line-height: 1.2;
              margin: 0;
            }
          }
 
-         &.edit {
+         .mail {
+           font-size: 14px;
+           color: $purple;
+         }
+
+         &.edit,
+         &.close {
            width: 10%;
+           text-align: right;
          }
 
          &.close {
-           width: 10%;
+           i {
+             @include transform(rotate(45deg));
+             color: $dark-gray;
+             font-size: 20px;
+             text-shadow: 4px 4px 2px rgba(150, 150, 150, .6);
+           }
          }
        }
      }
+  }
+
+  .buttons {
+    &:after {
+      @include after;
+    }
+
+    button {
+      @include box-shadow(0px 2px 5px -1px rgba(112,112,112,1));
+      padding: 10px 30px;
+      background-color: $blue;
+      color: $dark-gray;
+      font-size: 14px;
+
+      &:first-child {
+        float: left;
+      }
+
+      &:last-child {
+        float: right;
+      }
+    }
   }
 }
