--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -40,6 +40,7 @@ button {
 
   .contacts-list {
     margin: 20px 0 30px;
+
      &_item {
        padding: 10px;
        background-color: $light-purple;
@@ -70,7 +71,9 @@ button {
            }
          }
 
-         .mail {
+         .mail,
+         .phone {
+           display: block;
            font-size: 14px;
            color: $purple;
          }
@@ -104,6 +107,7 @@ button {
       background-color: $blue;
       color: $dark-gray;
       font-size: 14px;
+      cursor: pointer;
 
       &:first-child {
         float: left;
@@ -111,6 +115,39 @@ button {
 
       &:last-child {
         float: right;
+      }
+    }
+  }
+
+  .add-panel {
+    display: none;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    height: 100vh;
+    padding: 20px;
+    background-color: $light-gray;
+
+    &_form {
+      color: $dark-gray;
+
+      label {
+        display: block;
+      }
+
+      input {
+        width: 100%;
+        margin-bottom: 15px;
+        height: 30px;
+        padding: 10px;
+      }
+
+      textarea {
+        width: 100%;
+        border: none;
+        margin-bottom: 30px;
       }
     }
   }
