--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -25,8 +25,8 @@
                 <div class="icon"><i class="fa fa-address-book-o" aria-hidden="true"></i></div>
                 <div class="contact">
                     <p class="name">Adrian Alder</p>
-                    <span class="mail">mail@gmail.com</span>
-                    <span class="phone">375293338073</span>
+                    <p class="mail">mail@gmail.com</p>
+                    <p class="phone">375293338073</p>
                 </div>
                 <div class="edit"><i class="fa fa-pencil" aria-hidden="true"></i></div>
                 <div class="close"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
