--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -21,16 +21,16 @@
         </div>
 
         <div class="contacts-list">
-            <div class="contacts-list_item">
-                <div class="icon"><i class="fa fa-address-book-o" aria-hidden="true"></i></div>
-                <div class="contact">
-                    <p class="name">Adrian Alder</p>
-                    <p class="mail">mail@gmail.com</p>
-                    <p class="phone">375293338073</p>
-                </div>
-                <div class="edit"><i class="fa fa-pencil" aria-hidden="true"></i></div>
-                <div class="close"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>
-            </div>
+            <!--<div class="contacts-list_item">-->
+                <!--<div class="icon"><i class="fa fa-address-book-o" aria-hidden="true"></i></div>-->
+                <!--<div class="contact">-->
+                    <!--<p class="name">Adrian Alder</p>-->
+                    <!--<p class="mail">mail@gmail.com</p>-->
+                    <!--<p class="phone">375293338073</p>-->
+                <!--</div>-->
+                <!--<div class="edit"><i class="fa fa-pencil" aria-hidden="true"></i></div>-->
+                <!--<div class="delete"><i class="fa fa-plus-circle" aria-hidden="true"></i></div>-->
+            <!--</div>-->
         </div>
         <div class="buttons">
             <button>Countries</button>
