--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -40,14 +40,37 @@ button {
 
   .contacts-list {
     margin: 20px 0 30px;
+    display: block;
+    
+    &.hidden {
+      display: none;
+    }
 
      &_item {
+       @include transition(all 0.5s ease-in);
        padding: 10px;
+       height: 65px;
        background-color: $light-purple;
-       border-bottom: solid 1px $light-gray;
+       margin-bottom: 1px;
+
+       * {
+         opacity: 1;
+         @include transition(opacity 0.2s ease-in);
+       }
 
        &:after {
          @include after;
+       }
+
+       &.hiding {
+         @include transform(translateX(100%));
+         height: 0;
+         padding: 0;
+         margin-bottom: 0;
+
+        * {
+          opacity: 0;
+        }
        }
 
        > div {
@@ -79,12 +102,12 @@ button {
          }
 
          &.edit,
-         &.close {
+         &.delete {
            width: 10%;
            text-align: right;
          }
 
-         &.close {
+         &.delete {
            i {
              @include transform(rotate(45deg));
              color: $dark-gray;
