--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -45,6 +45,7 @@
                 <input type="text" id="last-name" class="form-field" required>
 
                 <label for="phone">Phone</label>
+                <div class="error-message">Please use correct format (country code - operator/city code - number</div>
                 <input type="tel" id="phone" class="form-field" required>
 
                 <label for="email">Email</label>
