--- a/app/styles/blocks/_colours.scss
+++ b/app/styles/blocks/_colours.scss
@@ -2,6 +2,7 @@ $background: #d6d6d6;
 $gray: #7a7a7a;
 $dark-gray: #616161;
 $light-gray: #d6d6d6;
+$lightest-gray: #f7f6f6;
 $purple: #9d7fa6;
 $light-purple: #e8eaf6;
 $blue: #90caf9;
