--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -7,13 +7,14 @@ input,
 button,
 textarea {
   outline: none;
-  border:none;
+  border: none;
 }
 
 .wrapper {
   background-color: $background;
   padding: 15px;
   min-height: 100vh;
+  position: relative;
 
   .filter-wrap {
     position: relative;
@@ -42,107 +43,132 @@ textarea {
   .contacts-list {
     margin: 20px 0 30px;
     display: block;
-    
+    overflow-y: scroll;
+
     &.hidden {
       display: none;
     }
 
-     &_item {
-       @include transition(all 0.5s ease-in);
-       padding: 10px;
-       height: 65px;
-       background-color: $light-purple;
-       margin-bottom: 1px;
+    &_item {
+      @include transition(all 0.5s ease-in);
+      padding: 10px;
+      height: 65px;
+      background-color: $light-purple;
+      margin-bottom: 1px;
 
-       &_details {
-         position: absolute;
-         left: 0;
-         top: 0;
-         z-index: 2;
-         width: 100%;
-         height: 100vh;
-         overflow: hidden;
-         background-color: pink;
-         display: none;
+      &_details {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 2;
+        overflow: hidden;
+        background-color: $lightest-gray;
+        margin: 10px;
+        display: none;
+        padding: 15px;
+        color: $gray;
 
-         &.shown {
-           display: block;
-         }
-       }
+        &.shown {
+          display: block;
+        }
 
-       * {
-         opacity: 1;
-         @include transition(opacity 0.2s ease-in);
-       }
+        h1 {
+          margin-top: 0;
+          font-weight: 100;
+        }
 
-       &:after {
-         @include after;
-       }
+        p {
+          margin-top: 0;
+        }
 
-       &.hiding {
-         @include transform(translateX(100%));
-         height: 0;
-         padding: 0;
-         margin-bottom: 0;
+        .title {
+          font-weight: bold;
+          margin-bottom: 5px;
+        }
+      }
+
+      * {
+        opacity: 1;
+        @include transition(opacity 0.2s ease-in);
+      }
+
+      &:after {
+        @include after;
+      }
+
+      &.hiding {
+        @include transform(translateX(100%));
+        height: 0;
+        padding: 0;
+        margin-bottom: 0;
 
         * {
           opacity: 0;
         }
-       }
+      }
 
-       > div {
-         display: inline-block;
-         vertical-align: middle;
+      > div {
+        display: inline-block;
+        vertical-align: middle;
 
-         &.icon {
-           width: 20%;
-           font-size: 22px;
-           color: $dark-gray;
-           text-align: center;
-         }
+        &.icon {
+          width: 20%;
+          font-size: 22px;
+          color: $dark-gray;
+          text-align: center;
+        }
 
-         &.contact {
-           width: 55%;
-           text-align: left;
-           line-height: 1;
+        &.contact {
+          width: 55%;
+          text-align: left;
+          line-height: 1;
 
-           p {
-             margin: 0;
-           }
-         }
+          p {
+            margin: 0;
+          }
+        }
 
-         .mail,
-         .phone {
-           display: block;
-           font-size: 14px;
-           color: $purple;
-         }
+        .mail,
+        .phone {
+          display: block;
+          font-size: 14px;
+          color: $purple;
+        }
 
-         &.edit,
-         &.delete {
-           width: 10%;
-           text-align: right;
-         }
+        &.edit,
+        &.delete {
+          width: 10%;
+          text-align: right;
+        }
 
-         &.delete {
-           i {
-             @include transform(rotate(45deg));
-             color: $dark-gray;
-             font-size: 20px;
-             text-shadow: 4px 4px 2px rgba(150, 150, 150, .6);
-           }
-         }
-       }
-     }
+        &.delete {
+          i {
+            @include transform(rotate(45deg));
+            color: $dark-gray;
+            font-size: 20px;
+            text-shadow: 4px 4px 2px rgba(150, 150, 150, .6);
+          }
+        }
+      }
+    }
   }
 
   .buttons {
+
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    right: 15px;
+
+
     &:after {
       @include after;
     }
 
     button {
-      @include box-shadow(0px 2px 5px -1px rgba(112,112,112,1));
+      @include box-shadow(0px 2px 5px -1px rgba(112, 112, 112, 1));
       padding: 10px 30px;
       background-color: $blue;
       color: $dark-gray;
