--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -30,7 +30,7 @@
                             <p class="mail">{{email}}</p>
                             <p class="phone">{{phone}}</p>
                         </div>
-                    <div class="edit"><i class="fa fa-pencil" aria-hidden="true"></i></div>
+                    <div class="edit"><i class="fa fa-pencil edit-btn" aria-hidden="true"></i></div>
                     <div class="delete"><i class="fa fa-plus-circle delete-btn" {{dataId}}='{{id}}' aria-hidden="true"></i></div>
                 </div>
             {{/shows}}
@@ -63,7 +63,7 @@
             </form>
 
             <div class="buttons">
-                <button id="cancel">Cancel</button>
+                <button id="cancel-add">Cancel</button>
                 <button type="submit" id="add">Add</button>
             </div>
         </div>
@@ -71,13 +71,17 @@
         <script id="contactsListItemDetails" type="text/template">
             {{#details}}
                 <h1>{{name}}</h1>
-                <p>Email</p>
+                <p class="title">Email:</p>
                 <p>{{email}}</p>
-                <p>Phone Number</p>
+                <p class="title">Phone Number:</p>
                 <p>{{phone}}</p>
-                <p>Notes</p>
+                <p class="title">Notes:</p>
                 <p>{{note}}</p>
             {{/details}}
+            <div class="buttons">
+                <button id="cancel-view">Cancel</button>
+                <button>Edit</button>
+            </div>
         </script>
         <div id="item-details" class="contacts-list_item_details"></div>
     </div>
