--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -10,6 +10,10 @@ textarea {
   border: none;
 }
 
+a {
+  color: $blue;
+}
+
 .wrapper {
   background-color: $background;
   padding: 15px;
@@ -43,7 +47,6 @@ textarea {
   .contacts-list {
     margin: 20px 0 30px;
     display: block;
-    overflow-y: scroll;
 
     &.hidden {
       display: none;
@@ -56,7 +59,8 @@ textarea {
       background-color: $light-purple;
       margin-bottom: 1px;
 
-      &_details {
+      &_details,
+      &_edit {
         position: absolute;
         left: 0;
         top: 0;
@@ -77,10 +81,6 @@ textarea {
         h1 {
           margin-top: 0;
           font-weight: 100;
-        }
-
-        p {
-          margin-top: 0;
         }
 
         .title {
