--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -89,6 +89,21 @@ a {
         }
       }
 
+      &_edit {
+        label {
+          display: block;
+        }
+
+        input,
+        textarea {
+          width: 100%;
+          border: solid 1px $black;
+          margin-bottom: 10px;
+          color: $gray;
+          padding: 5px 10px;
+        }
+      }
+
       * {
         opacity: 1;
         @include transition(opacity 0.2s ease-in);
@@ -207,7 +222,7 @@ a {
         width: 100%;
         margin-bottom: 15px;
         height: 30px;
-        padding: 10px;
+        padding: 5px 10px;
       }
 
       textarea {
