--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -30,7 +30,7 @@
                             <p class="mail">{{email}}</p>
                             <p class="phone">{{phone}}</p>
                         </div>
-                    <div class="edit"><i class="fa fa-pencil edit-btn" aria-hidden="true"></i></div>
+                    <div class="edit"><i class="fa fa-pencil edit-btn" {{dataId}}='{{id}}' aria-hidden="true"></i></div>
                     <div class="delete"><i class="fa fa-plus-circle delete-btn" {{dataId}}='{{id}}' aria-hidden="true"></i></div>
                 </div>
             {{/shows}}
