--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -100,7 +100,7 @@
             {{/edit}}
             <div class="buttons">
                 <button id="cancel-edit">Cancel</button>
-                <button>Edit</button>
+                <button id="update-contact">Edit</button>
             </div>
         </script>
         <div id="edit-contact-panel" class="contacts-list_item_edit"></div>
