change and update contact

--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -90,13 +90,13 @@
             {{#edit}}
                 <h1>{{name}}</h1>
                 <label for="edit-email" class="title">Email:</label>
-                <input id="edit-email" type="text" value="{{email}}">
+                <input id="edit-email" type="text">
 
                 <label for="edit-phone" class="title">Phone No:</label>
-                <input id="edit-phone" type="text" value="{{phone}}">
+                <input id="edit-phone" type="text">
 
                 <label for="edit-note" class="title">Notes:</label>
-                <textarea id="edit-note" placeholder="{{note}}"></textarea>
+                <textarea id="edit-note"></textarea>
             {{/edit}}
             <div class="buttons">
                 <button id="cancel-edit">Cancel</button>
