import export JSON

--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -104,6 +104,10 @@
             </div>
         </script>
         <div id="edit-contact-panel" class="contacts-list_item_edit"></div>
+
+        <a href="" id="export">Export</a>
+        <input id="upload" type="file" name="file-upload">
+        <button id="import">Import</button>
     </div>
 </body>
 </html>
