--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="wrapper">
         <div class="filter-wrap">
-            <input type="text" placeholder="Filter by name" name="filter" class="name-filter" >
+            <input id="filter" type="text" placeholder="Filter" name="filter" class="name-filter" >
         </div>
 
         <script id="contactsListItem" type="text/template">
