--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -28,7 +28,7 @@
                         <div class="contact">
                             <p class="name">{{name}}</p>
                             <p class="mail">{{email}}</p>
-                            <p class="phone">{{phone}}</p>
+                            <p class="phone">+{{phone}}</p>
                         </div>
                     <div class="edit"><i class="fa fa-pencil edit-btn" {{dataId}}='{{id}}' aria-hidden="true"></i></div>
                     <div class="delete"><i class="fa fa-plus-circle delete-btn" {{dataId}}='{{id}}' aria-hidden="true"></i></div>
@@ -50,9 +50,11 @@
                 <label for="last-name">Last Name</label>
                 <input type="text" id="last-name" class="form-field" required>
 
-                <label for="phone">Phone</label>
+                <label for="country-code">Phone</label>
                 <div class="error-message">Please use correct format (country code - operator/city code - number</div>
-                <input type="tel" id="phone" class="form-field" required>
+                <span class="plus">+</span>
+                <input type="tel" id="country-code" class="form-field country-code" required>
+                <input type="tel" id="phone" class="form-field phone" required>
 
                 <label for="email">Email</label>
                 <input type="email" id="email" class="form-field" required>
@@ -74,7 +76,7 @@
                 <p class="title">Email:</p>
                 <a href="mailto:{{email}}">{{email}}</a>
                 <p class="title">Phone Number:</p>
-                <a href="tel:{{phone}}">{{phone}}</a>
+                <a href="tel:{{phone}}">+{{phone}}</a>
                 <p class="title">Notes:</p>
                 <p>{{note}}</p>
             {{/details}}
@@ -93,8 +95,9 @@
                 <input id="edit-email" type="text">
 
                 <label for="edit-phone" class="title">Phone No:</label>
-                <input id="edit-phone" type="text">
-
+                <span class="plus">+</span>
+                <input id="edit-code" type="text" class="country-code" required>
+                <input id="edit-phone" type="text" class="phone" required>
                 <label for="edit-note" class="title">Notes:</label>
                 <textarea id="edit-note"></textarea>
             {{/edit}}
