--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -258,4 +258,19 @@ a {
   .plus {
     width: 2%;
   }
+
+  .load-base {
+    display: none;
+    width: 100%;
+    height: 100vh;
+    background-color: $light-purple;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+
+    &.shown {
+      display: block;
+    }
+  }
 }
