--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -38,7 +38,7 @@
         <div id="contacts-list" class="contacts-list"></div>
 
         <div class="buttons">
-            <button>Countries</button>
+            <button id="countries">Countries</button>
             <button id="add-contact">Add New</button>
         </div>
 
@@ -107,6 +107,12 @@
             </div>
         </script>
         <div id="edit-contact-panel" class="contacts-list_item_edit"></div>
+
+        <div class="load-base">
+            Please upload countries codes base
+            <input id="upload-code-base" type="file" name="upload-code-base">
+            <button id="upload-base-btn">Upload Code Base</button>
+        </div>
 
         <a href="" id="export">Export</a>
         <input id="upload" type="file" name="file-upload">
