--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -259,7 +259,8 @@ a {
     width: 2%;
   }
 
-  .load-base {
+  .load-base,
+  .countries-count-panel {
     display: none;
     width: 100%;
     height: 100vh;
