--- a/app/styles/blocks/_mixins.scss
+++ b/app/styles/blocks/_mixins.scss
@@ -38,3 +38,22 @@
   display: block;
   clear: both;
 }
+
+@mixin standard-panel {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  overflow: hidden;
+  background-color: $lightest-gray;
+  margin: 10px;
+  display: none;
+  padding: 15px;
+  color: $gray;
+
+  &.shown {
+    display: block;
+  }
+}
