--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -17,7 +17,9 @@ a {
 .wrapper {
   background-color: $background;
   padding: 15px;
-  min-height: 100vh;
+  height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
   position: relative;
 
   .filter-wrap {
@@ -47,6 +49,8 @@ a {
   .contacts-list {
     margin: 20px 0 30px;
     display: block;
+    height: 70vh;
+    overflow-y: scroll;
 
     &.hidden {
       display: none;
@@ -61,22 +65,7 @@ a {
 
       &_details,
       &_edit {
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 2;
-        overflow: hidden;
-        background-color: $lightest-gray;
-        margin: 10px;
-        display: none;
-        padding: 15px;
-        color: $gray;
-
-        &.shown {
-          display: block;
-        }
+        @include standard-panel;
 
         h1 {
           margin-top: 0;
@@ -151,6 +140,10 @@ a {
 
           p {
             margin: 0;
+            font-size: 15px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
           }
         }
 
@@ -179,6 +172,22 @@ a {
     }
   }
 
+  .countries-panel,
+  .load-base-panel {
+    @include standard-panel;
+  }
+
+  .country-row {
+    border: solid 1px $light-gray;
+    border-bottom: none;
+    background-color: white;
+    padding: 10px 5px;
+
+    &:last-child {
+      border-bottom: solid 1px $light-gray;
+    }
+  }
+
   .buttons {
     position: absolute;
     bottom: 15px;
@@ -189,22 +198,86 @@ a {
     &:after {
       @include after;
     }
+  }
 
-    button {
-      @include box-shadow(0px 2px 5px -1px rgba(112, 112, 112, 1));
-      padding: 10px 30px;
-      background-color: $blue;
+  button,
+  .button {
+    @include box-shadow(0px 2px 5px -1px rgba(112, 112, 112, 1));
+    padding: 10px 30px;
+    background-color: $blue;
+    color: $dark-gray;
+    font-size: 14px;
+    cursor: pointer;
+    text-decoration: none;
+    font-family: inherit;
+
+    &:first-child {
+      float: left;
+    }
+
+    &:last-child {
+      float: right;
+    }
+
+    &.add-new {
+      position: relative;
+
+      &:before {
+        content: "\f067";
+        position: absolute;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 20px;
+        height: 20px;
+        line-height: 20px;
+        font-size: 10px;
+        border-radius: 10px;
+        background-color: $orange;
+        color: white;
+        font-family: FontAwesome;
+        box-shadow: 0 5px 4px 2px rgba(150, 150, 150, 0.6);
+      }
+
+      span {
+        position: relative;
+        left: 10px;
+      }
+    }
+  }
+
+  .export-import-btns {
+    &:after {
+      @include after;
+    }
+
+    .file-upload {
+      width: 50%;
+    }
+  }
+
+  .file-upload {
+    float: right;
+    text-align: right;
+
+    .fa-upload {
       color: $dark-gray;
-      font-size: 14px;
+    }
+
+    input {
+      display: none;
+    }
+
+    .upload-label {
+      display: inline-block;
+      line-height: 36px;
+      margin-right: 10px;
       cursor: pointer;
+    }
 
-      &:first-child {
-        float: left;
-      }
-
-      &:last-child {
-        float: right;
-      }
+    button[disabled] {
+      opacity: .6;
+      cursor: not-allowed;
     }
   }
 
@@ -257,21 +330,5 @@ a {
 
   .plus {
     width: 2%;
-  }
-
-  .load-base,
-  .countries-count-panel {
-    display: none;
-    width: 100%;
-    height: 100vh;
-    background-color: $light-purple;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-
-    &.shown {
-      display: block;
-    }
   }
 }
