--- a/app/styles/blocks/_mixins.scss
+++ b/app/styles/blocks/_mixins.scss
@@ -25,12 +25,12 @@
   -o-transform: ($value);
   transform: ($value);
 }
-
-@mixin transition($value) {
-  -webkit-transition: ($value);
-  -moz-transition: ($value);
-  -o-transition: ($value);
-  transition: ($value);
+@mixin transition($x...){
+  -webkit-transition: $x;
+  -moz-transition: $x;
+  -ms-transition: $x;
+  -o-transition: $x;
+  transition: $x;
 }
 
 @mixin after {
