--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -58,7 +58,8 @@ a {
     }
 
     &_item {
-      @include transition(all 0.5s ease-in);
+      @include transition(transform .5s linear, height .3s linear .5s, padding .3s linear .5s);
+      @include transform(translateX(0));
       padding: 10px;
       height: 65px;
       background-color: $light-purple;
@@ -105,7 +106,7 @@ a {
 
       * {
         opacity: 1;
-        @include transition(opacity 0.2s ease-in);
+        @include transition(opacity 0.7s linear);
       }
 
       &:after {
@@ -241,7 +242,7 @@ a {
         background-color: $orange;
         color: white;
         font-family: FontAwesome;
-        box-shadow: 0 5px 4px 2px rgba(150, 150, 150, 0.6);
+        @include box-shadow(0 5px 4px 2px rgba(150, 150, 150, 0.6));
       }
 
       span {
