--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -8,9 +8,7 @@
 
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" media="all" href="styles/main.css">
-    <!--<link rel="stylesheet" href="../../../font-awesome/css/font-awesome.min.css">-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <!--<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet">
     <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/plugins.js"></script>
@@ -30,6 +28,7 @@
             </div>
         </div>
 
+        <!--contacts list-->
         <script id="contactsListItem" type="text/template">
             {{#shows}}
                 <div id='{{id}}' class="contacts-list_item">
@@ -51,6 +50,7 @@
             <button id="add-contact" class="add-new"><span>Add New</span></button>
         </div>
 
+        <!--add contact panel-->
         <div class="add-panel">
             <form class="add-panel_form">
                 <label for="first-name">First Name</label>
@@ -135,7 +135,7 @@
 
         <!--upload code base panel-->
         <div class="load-base-panel">
-            <p>Please upload country codes base</p>
+            <p>Please upload CountryCodes.json from phonebook directory</p>
             <div class="file-upload">
                 <label for="upload-code-base" class="upload-label"><i class="fa fa-upload" aria-hidden="true"></i></label>
                 <input id="upload-code-base" type="file" name="upload-code-base">
@@ -143,7 +143,7 @@
 
                 <!--after upload code base panel-->
                 <div class="successful-upload-block">
-                    <p>Thank you! Country codes base was successfully uploaded</p>
+                    <p>Thank you! Country codes was successfully uploaded</p>
                     <button type="button" id="see-countries-btn">Countries</button>
                 </div>
             </div>
